fixing gap

--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -119,10 +119,9 @@
         }
 
         .labels {
-          margin-top: 4px;
           display: flex;
           flex-wrap: wrap;
-          gap: 10px;
+          gap: 5px 3px;
 
           .label {
             padding: 4px 8px;
